Re-enable TestMemoryInfra browser tests

The single process memory infra tests were failing because the number of
tracing categories exceeded the MAX_CATEGORY_GROUPS. This is increased
to 200 to suit the needs of single proecss mode (WebView).

BUG=594884
TBR=brettw@chromium.org

Review-Url: https://codereview.chromium.org/2043883003
Cr-Commit-Position: refs/heads/master@{#399267}

Former-commit-id: 84b8d0d550280accd6b53af42b0899cda78cdb67